<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">CatMine</string>
    <string name="exit_msg1">确定</string>
    <string name="exit_msg2">取消</string>
    <string name="exit_msg">真的要离开了吗?</string>
    <string name="city_select">请输入关键字</string>
    <string name="weather_msg1">风力:</string>
    <string name="weather_msg2">温度:</string>
    <string name="weather_msg3">Pm2.5:</string>
    <string name="weather_msg4">切换城市</string>
    <string name="image_info_msg1">返回列表</string>
    <string name="payrecord_msg1">收入</string>
    <string name="payrecord_msg2">支出</string>
    <string name="payrecord_msg3">请输入金额</string>
    <string name="payrecord_msg4">添加备注</string>
    <string name="payrecord_msg5">历史</string>
    <string name="payrecord_msg6">保存</string>
    <string name="payrecord_msg7">今日</string>
    <string name="payhistory_msg1">至</string>
    <string name="payhistory_msg2">起始时间</string>
    <string name="payhistory_msg3">结束时间</string>
    <string name="payhistory_msg4">搜索</string>
    <string name="payhistory_msg5">备注关键词</string>
    <string name="payhistory_msg6">历史记录</string>
    <string name="payhistory_msg7">结余</string>
    <string name="title_activity_movies">Movies</string>

</resources>