<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exit_bg"
    android:gravity="center_vertical|center_horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/exit_msg"
        android:textColor="@color/gray2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/exit_sure"
        style="@style/exit_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/exit_msg1" />

    <Button
        android:id="@+id/exit_cancel"
        style="@style/exit_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/exit_msg2" />

</RelativeLayout>