<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".PayRecordHistory" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_margin="5dip"
        android:background="@drawable/black_writeline_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payhistory_msg6"
            android:textColor="@color/white1"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:background="@drawable/black_writeline_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pay_history_starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/payhistory_msg1"
                android:textColor="@color/white1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pay_history_endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white1"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/pay_history_startbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payhistory_msg2"
                android:textColor="@color/white1" />

            <Button
                android:id="@+id/pay_history_endbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payhistory_msg3"
                android:textColor="@color/white1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/pay_history_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/pay_history_edittext"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:hint="@string/payhistory_msg5"
                android:textColor="@color/white1" >
            </EditText>

            <Button
                android:id="@+id/pay_history_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payhistory_msg4"
                android:textColor="@color/white1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/pay_history_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/transparent"
            android:dividerHeight="5dip"
            android:overScrollMode="never"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

</LinearLayout>